made first wave of corrections to the report

--- a/report/1_introduction/3_qcp.tex
+++ b/report/1_introduction/3_qcp.tex
@@ -1,25 +1,22 @@
-\subsection{Origin of Cuprate Superconductivity: The Quantum Critical Point}
-\begin{figure}
-    \centering
-    \includegraphics[width=0.5\textwidth]{figures/phase_diagram}
-    \caption{Phase diagram of Cuprates. $p^*$ marks the QCP.}
-    \label{fig:phase_diagram}
-\end{figure}
-
-The origin of high-temperature superconductivity in Cuprates is still the subject of intense
+\subsection{Origin of Cuprate Superconductivity:\\The Quantum Critical Point}
+The origin of high-temperature superconductivity in cuprates is still the subject of intense
 research and debate, but a possible explanation has to do with the Quantum Critical Point (QCP).
 The QCP is a point in the phase diagram of a material where there is a phase transition at zero
-temperature. This phase transition is driven by quantum effects, hence the name. In the case of
-Cuprates, this is a critical doping level, usually denoted by $p_c$ or $p^*$. The actual existence
-of a QCP for Cuprates is still a matter of debate and it is the subject of this project.
+temperature. This phase transition is driven by quantum fluctuations, hence the name. This phase
+transition could lead to inteeractions that generate supercunductivity In the case of
+cuprates, this is a critical doping level, usually denoted by $p_c$ or $p^*$. The actual existence
+of a QCP for cuprates is still a matter of debate and it is the subject of this project.
 
-In their 2019 paper, Michon et al. \cite{michon2019} used secific heat measurements to
+In their 2019 paper, Michon et al.\cite{michon2019} used specific heat measurements to
 show the existence of the QCP. The effective mass of the charge carriers is expected to diverge at
 the QCP, and the effective mass is proportional to $C/T$ where $C$ is the specific heat attributed
 to the charge carriers and $T$ is the temperature. So, to probe the QCP, Michon et al. measured
-the specific heat at very low temperatures (1 to 2 K) and extrapolated to zero temperature. More
-specifically, they show
-\begin{equation}
-    \frac{C(T)}{T} = \gamma + \beta T^2.
-\end{equation}
-They found $\gamma$ peaks at the critical doping level, which is the signature of the QCP.
+the specific heat at very low temperatures (1 to 2 K) and extrapolated to zero temperature. They
+showed that the specific heat increases dramatically and peaks at the critical doping level
+(Figure \ref{fig:michon}), which is a signature of a QCP.
+
+The reason this divergence is expected is that the specific heat is related
+to entropy, which is maximal at such a phase transition. This is because the phase transition is a
+maximally disordered state, due to loss of scale (i.e. large correlation lengths) and high
+fluctuations.\footnote{Again, this is related to loss of scale, but a deeper discussion of phase
+transitions is beyond the scope of this report.}
