--- a/report/1_introduction/5_boltzmann.tex
+++ b/report/1_introduction/5_boltzmann.tex
@@ -11,6 +11,6 @@ derived from Boltzmann transport theory.
 While the Drude model is derived for a free electron 
 (meaning it has isotropic transport properties), 
 Boltzmann transport takes into account such anisotropy. 
-This is particularly interesting for the study of Cuprate high temperature superconductors, 
+This is particularly interesting for the study of cuprate high temperature superconductors, 
 where anisotropy is suspected to be of paramount importance.
 
