--- a/report/2_optical_conductivity/1_what_is_optical_conductivity.tex
+++ b/report/2_optical_conductivity/1_what_is_optical_conductivity.tex
@@ -3,32 +3,32 @@
 The physical quantity of interest in this experiment is optical conductivity, 
 the principle of which we will briefly explain.
 
-Conductivity is often measured in static conditions : 
+Conductivity is often measured in static conditions: 
 that is, for a constant or slowly varying applied electric fields. 
 However, as for many physical systems, 
 the dynamic response of the system is different from the static one. 
 
 This dynamic response, 
 that is the conductivity of a material under an applied electric field at a given frequency $\omega$, 
-is precisely the optical conductivity $\sigma{\omega}$. 
-Here, because we're talking about periodic excitations, this complex conductivity relates the amplitude and phase of current density to those of the applied electric field. \\
+is precisely the optical conductivity $\sigma(\omega)$. 
+Here, because we are talking about periodic excitations, this complex conductivity relates the amplitude and phase of current density to those of the applied electric field.
 
-Optical conductivity is a powerful probe into the electronic properties of the examined material, 
-giving a better insight than DC conductivity alone. 
+\sloppy{Optical conductivity $\sigma(\omega)$ is a powerful probe into the electronic properties of the
+examined material,  giving a better insight than DC conductivity $\sigma(\omega=0)$ alone. 
 Moreover, as is done in Legros et al., 
 it is possible to apply an external magnetic field to the sample. 
 This yields interesting behaviours such as Angle Dependent Magnetoresistance (ADMR) 
-or the results of the experiment at hand. \\
+or the results of the experiment at hand.}
 
 % Touch on the experimental setup
 There are several experimental setups used to measure optical conductivity. 
 While in principle, we can probe any frequency domain, 
 we are in practice interested in the optical frequencies. 
-In this case, there are two main categories of experiments that can be carried out : 
+In this case, there are two main categories of experiments that can be carried out: 
 transmission and reflection. 
 
 
-Legros et al. chose a transmission setup through a thin film ($\sim 10$ nm, 10-100 layers) as their method. 
+Legros et al.\cite{legros2022} chose a transmission setup through a thin film ($\sim 10$ nm, 10-100 layers) as their method. 
 The full experimental setup is not without challenges but is not directly relevant to our study. 
 However, we can note that since the electronic properties of cuprates are mainly 2D 
 (owing to their peroskite structure, as explained above), 
