--- a/report/2_optical_conductivity/3_chambers.tex
+++ b/report/2_optical_conductivity/3_chambers.tex
@@ -12,31 +12,31 @@ which can show more subtleties in its physical description.
 
 Using the equation, with a few reasonable assumptions, 
 one can derive the Chambers formula for conductivity. 
-The formula is usually applied for DC resistivity, 
+The formula is usually applied for DC conductivity ($\sigma(\omega=0)$), 
 but it can be generalized for optical conductivity too (see appendix \ref{sec:chambers}).
 This model has been used successfully in the past to study the behavior of cuprates 
 and make predictions about their physical properties\cite{grissonnanche2021}, 
-justifying its use here. \\
+justifying its use here.
 
 According to the Chambers formula for optical conductivity, 
 the conductivity tensor in the cartesian basis is then given by :
 \begin{equation}
-	\sigma_{ab} = \frac{2e^2}{(2\pi)^d\hbar}\int_{FS}\dd{\vb{k}}\hat{v}_a(\vb{k})
-        \int_0^{\infty}\dd{s}v_b(\vb{k}(s))\exp{i\omega s
-        - \int_0^s \frac{\mathop{ds'}}{\tau(\vb{k}(s'))}}
+	\sigma_{ab} = \frac{2e^2}{(2\pi)^d\hbar}\int_{\mathrm{FS}}\dd{\vb{k}}\hat{v}_a(\vb{k})
+        \int_0^{\infty}\dd{t}v_b(\vb{k}(t))\exp{i\omega t
+        - \int_0^t \frac{\mathop{dt'}}{\tau(\vb{k}(t'))}}
 \end{equation}
-where $FS$ is the Fermi surface, $d$ is the number of dimensions of the system, $\vb{k}$ is the
+where $\mathrm{FS}$ is the Fermi surface, $d$ is the number of dimensions of the system, $\vb{k}$ is the
 wavevector, $\omega$ is the frequency of the electromagnetic waves, $v_b$ is the veclocity of the
 charge carriers in the $b$ direction, $\hat{v}_a\equiv v_a/\abs{\vb{v}}$, and $\tau$ is the
-relaxation time (inverse of the scattering rate). \\
+relaxation time (inverse of the scattering rate). 
 
 We can have an intuitive understanding of this formula. 
 First, as we see here, we are only interested in the electrons that live on (or near, strictly speaking when at nonzero temperature) the Fermi surface as defined previously. 
 Indeed, it is possible to show, as was mentioned above, that only they will meaningfully contribute to conduction. 
-For any starting point $\vec{k}$ on the Fermi surface (first integral) with a given associated velocity in the $a$ component, 
-we are interested the electron's velocity in the $b$ component along its trajectory (parametrised by $s$). 
+For any starting point $\vb{k}$ on the Fermi surface (first integral) with a given associated velocity in the $a$ component, 
+we are interested the electron's velocity in the $b$ component along its trajectory (parametrised by $t$,  which can be time). 
 The exponential terms account for the influence of the varying electrical field and the scattering rate of electron (that is not uniform in phase space). 
-The magnetic field appears implicitly in the movement equations that define $\vec{k}(s)$.
+The magnetic field appears implicitly in the movement equations that define $\b{k}(t)$.
 
 Thus, the formula reflects how, on average, electrons move in the $b$ direction when initially excited in the $a$ direction.
 
@@ -62,6 +62,9 @@ Where $\varepsilon$ is the energy of the charge carriers. The movement equation 
 numerically for a discretization of the Fermi surface (since the Chambers formula integral is
 evaluated over the Fermi surface).
 
+Here, note that the magnetic field $\vb{B}$ is always pointed along the $z$ direction for the data
+we examined. However, our methods allow any direction for the magnetic field too.
+
 \subsubsection{Scattering Rate}
 Following Grissonnanche et al.\cite{grissonnanche2021}, we used a simple model for the scattering
 rate, respecting the symmetry of the system. It is given by
@@ -83,7 +86,6 @@ tetragonal crystal structure of LSCO, given by
 \end{equation}
 where $\mu$ is the chemical potential, $t$, $t'$, and $t''$ are the first, second, and third
 nearest-neighbor hopping parameters, $t_z$ is the interlayer hopping parameter,
-$a=\si{3.75}{\angstrom}$ is the in-plane lattice constant, and $c/2=\si{6.6}{\angstrom}$ is the
-$\mathrm{CuO_2}$ layer spacing. \\
-
-These parameters are tabulated and, for the considered samples, can be fitted to experimental methods with good accuracy. 
+$a=3.75\angstrom$ is the in-plane lattice constant, and $c/2=6.6\angstrom$ is the
+$\mathrm{CuO_2}$ layer spacing. These parameters are tabulated and, for the considered samples,
+can be fitted to experimental methods with good accuracy. 
