--- a/report/2bis_code_and_tools/1_plot_digitization.tex
+++ b/report/2bis_code_and_tools/1_plot_digitization.tex
@@ -3,10 +3,11 @@ Once we understood well the disadvantages the Drude model had,
 and the potential benefits of using Chambers' formula instead, 
 we needed to get access to the experimental data in order to 
 first reproduce the literature's Drude modelling and 
-second run our own fits using Chambers' formula.\\
+second run our own fits using Chambers' formula.
 
-Since the raw data of Legros et al. and Post et al. is not publicly available neither in the articles nor in supplemental data files, 
-we digitized it from their papers using a custom script extracting the data from SVG exports of the figures. 
+Since the raw data of Legros et al. \cite{legros2022} and Post et al. \cite{post2021} is not publicly available neither in the articles nor in supplemental data files, 
+we digitized it from their papers using a custom script extracting the data from SVG exports of the figures.
+This fully accurate method is not freely available, so we had to develope it ourselves.
 
 Digital files of papers contain vector graphics, 
 which explicitly encode graphs as points and paths with given coordinates to draw lines. 
