--- a/report/3_results/4_effective_mass.tex
+++ b/report/3_results/4_effective_mass.tex
@@ -29,4 +29,5 @@ few points for comparison, so drawing strong conclusions is difficult. However, 
 our results are qualitatively closer to Michon et al., in the sense that the effective mass does
 not decrease and increase as much in low and high doping respectively, and that it is roughly
 decreasing in the measured range like Michon et al. Again, the data is very sparse and there are
-large errors, so these conclusions are not definitive.
+large errors, so these conclusions are not definitive. We will need further careful analysis to
+reach publishable results.
