--- a/report/report.tex
+++ b/report/report.tex
@@ -6,6 +6,7 @@
 \usepackage{indentfirst}
 \usepackage{subcaption}
 \usepackage{graphicx}
+\usepackage[section]{placeins}
 
 
 \hypersetup{colorlinks=true, urlcolor=cyan}
