--- a/report/2_optical_conductivity/2_drude_modelling.tex
+++ b/report/2_optical_conductivity/2_drude_modelling.tex
@@ -24,7 +24,8 @@ In this model, the complex optical conductivity in the left/right circular polar
         \frac{\omega^2_{\mathrm{p,n}}}{\omega-\omega_c+i\Gamma}
         + \frac{\omega^2_{\mathrm{p,s}}}{\omega} - \omega(\epsilon_{\infty} - 1)),
 \end{equation}
-where $\omega$ is the frequency of the electromagnetic waves and the adjustable parameters are
+where $\omega$ is the frequency of the electromagnetic waves, $\epsilon_0$ is the vacuum
+permittivity, and the adjustable parameters are
 \begin{itemize}
     \item $\omega_{\mathrm{p,n}}$ and $\omega_{\mathrm{p,s}}$: plasma frequencies of the normal and
         superconducting charge carriers,
@@ -32,11 +33,12 @@ where $\omega$ is the frequency of the electromagnetic waves and the adjustable 
     \item $\Gamma$: scattering rate,
     \item $\epsilon_{\infty}$: high-frequency dielectric constant.
 \end{itemize}
-Left handed circular polarization is given by a negative omega and right handed by a positive omega.
+Left handed circular polarization is given by a negative $\omega$ and right handed by a positive $\omega$.
 
 As stated in Legros et al. and other sources, 
-the high-frequency dielectric constant does not greatly improve the quality of the fit and its results, so it is set to 1.
+the high-frequency dielectric constant ($\epsilon_\infty$) does not greatly improve the quality of the fit and its results, so it is set to 1.
 Additionally, we can see here that in this model, the superconducting carriers only contribute to the imaginary part of $\sigma$. 
 This ended up being relevant to inform our fitting choices in the end.
 
-
+As mentioned before, this model breaks down for materials with highly anisotropic electronic properties
+(i.e. highly anisotropic Fermi surfaces).
