Add gamma reproduction plots

--- a/report/3_results/2_reproduction.tex
+++ b/report/3_results/2_reproduction.tex
@@ -58,15 +58,15 @@ in principle, not depend on $B$.
 \begin{figure}
 \centering
 \begin{subfigure}{0.45\textwidth}
-    \includegraphics[width=\textwidth]{example-image}
-    \caption{Our plot}
-    \label{fig:gamma_extraction_ours}
+    \includegraphics[width=\textwidth]{figures/gamma_theirs.png}
+    \caption{Their plot}
+    \label{fig:gamma_ours}
 \end{subfigure}
 \hfill
 \begin{subfigure}{0.45\textwidth}
-    \includegraphics[width=\textwidth]{example-image}
-    \caption{Their plot}
-    \label{fig:gamma_extraction_theirs}
+    \includegraphics[width=\textwidth]{figures/fitting_Drude_extracted_Gamma.pdf}
+    \caption{Our plot}
+    \label{fig:gamma_theirs}
 \end{subfigure}
         
 \caption{Reproduction of Post et al. data analysis and extraction of isotropic Drude scattering $\Gamma$ as a function of applied field $B$}
