Add Fermi surface plot

--- a/report/ref.bib
+++ b/report/ref.bib
@@ -98,3 +98,22 @@
   journal = {Proceedings of the Physical Society. Section A},
   abstract = {}
 }
+
+@article{fang2022,
+  title = {Fermi Surface Transformation at the Pseudogap Critical Point of a Cuprate Superconductor},
+  author = {Fang, Yawen and Grissonnanche, Gael and Legros, Anaelle and Verret, Simon and Laliberte, Francis and Collignon, Clement and Ataei, Amirreza and Dion, Maxime and Zhou, Jianshi and Graf, David and Lawler, Michael J. and Goddard, Paul A. and Taillefer, Louis and Ramshaw, B. J.},
+  year = {2022},
+  month = may,
+  journal = {Nature Physics},
+  volume = {18},
+  number = {5},
+  pages = {558--564},
+  publisher = {Nature Publishing Group},
+  issn = {1745-2473, 1745-2481},
+  doi = {10.1038/s41567-022-01514-1},
+  urldate = {2024-10-26},
+  copyright = {2022 The Author(s), under exclusive licence to Springer Nature Limited},
+  langid = {english},
+  keywords = {Electronic properties and materials,Superconducting properties and materials},
+}
+
