--- a/report/3_results/2bis_qualitative_understanding.tex
+++ b/report/3_results/2bis_qualitative_understanding.tex
@@ -33,6 +33,13 @@
     \label{fig:vary_field}
 \end{figure}
 
+\begin{figure}
+    \centering
+    \includegraphics[width=0.7\textwidth]{figures/fermi_surface.png}
+    \caption{From Fang et al.\cite{fang2022}, profile of the Fermi surface of NdLSCO at different $k_z$ slices}
+    \label{fig:fermi_surface}
+\end{figure}
+
 
 Due to the complexity of the parameter space, 
 we wanted to gain a qualitative understanding of the dependence of the conductivity curve on said parameters. 
