expanded and improved introduction

--- a/report/1_introduction/3_qcp.tex
+++ b/report/1_introduction/3_qcp.tex
@@ -1,9 +1,9 @@
 \subsection{Origin of Cuprate Superconductivity:\\The Quantum Critical Point}
 The origin of high-temperature superconductivity in cuprates is still the subject of intense
-research and debate, but a possible explanation has to do with the Quantum Critical Point (QCP).
-The QCP is a point in the phase diagram of a material where there is a phase transition at zero
-temperature. This phase transition is driven by quantum fluctuations, hence the name. This phase
-transition could lead to inteeractions that generate supercunductivity In the case of
+research and debate, but a possible explanation has to do with a hypothetical Quantum Critical
+Point (QCP). The QCP is a point in the phase diagram of a material where there is a phase transition
+at zero temperature. This phase transition is driven by quantum fluctuations, hence the name. This
+phase transition could lead to inteeractions that generate supercunductivity In the case of
 cuprates, this is a critical doping level, usually denoted by $p_c$ or $p^*$. The actual existence
 of a QCP for cuprates is still a matter of debate and it is the subject of this project.
 
