--- a/report/1_introduction/2_hightc.tex
+++ b/report/1_introduction/2_hightc.tex
@@ -1,19 +1,22 @@
 \subsection{Cuprates: High temperature superconductors}
 \begin{figure}
     \centering
-    \begin{subfigure}{0.48\textwidth}
+    \begin{subfigure}{0.37\textwidth}
         \centering
         \includegraphics[width=\textwidth]{figures/cuprate_structure}
         \caption{Crystal structure of a Cuprate (YBCO)}
         \label{fig:cuprate_structure}
-    \end{subfigure}
-    \begin{subfigure}{0.48\textwidth}
+    \end{subfigure}\hfill
+    \begin{subfigure}{0.5\textwidth}
         \centering
         \includegraphics[width=\textwidth]{figures/phase_diagram}
-        \caption{Phase diagram of cuprates. $p^*$ marks the QCP.}
+        \caption{Phase diagram of cuprates}
         \label{fig:phase_diagram}
     \end{subfigure}
-    \caption{Physical description of cuprates.}
+    \caption{Physical description of cuprates. (a) shows the provskite structure of a cuprate,
+    and (b) shows the different phases of cuprates in a phase diagram. $p^*$ marks the hypothesised
+    quantum critical point. AF, PG, and SC stand for Antiferromagnetic, Pseudogap, and
+    Superconducting phases respectively.}
 \end{figure}
 
 Cuprates are a class of superconductors with high critical temperature that have been subject
@@ -22,4 +25,13 @@ in their various phases.
 
 The crystal structure of cuprates is a perovskite structure, with a copper-oxygen plane
 ($\mathrm{CuO}_2$) as the main conducting layer. This structure is shown in Figure
-\ref{fig:cuprate_structure}.
+\ref{fig:cuprate_structure}. You can think of cuprates as a stack of different conducting layers,
+so the electronic properties of cuprates are mainly 2D. However, the interlayer coupling is
+non-negligible, and the 3D nature of cuprates is important for their physical properties.
+
+The phase diagram of cuprates is shown in Figure \ref{fig:phase_diagram}. The main phases of
+cuprates are the Antiferromagnetic (AF) phase, the metallic phase, the Pseudogap (PG) phase,
+the Superconducting (SC) phase. The metallic phase itself can be split into a strange metal
+phase (with anamolous electronic scattering properties) and a normal metal phase (with
+well-described conductivity, using Fermi liquid theory). There is also a hypothesised point in the
+phase diagram called the quantum critical point, marked as $p^*$ in the figure.
