added footnotes for fermi surface explanations

--- a/report/1_introduction/4_optical_conductivity.tex
+++ b/report/1_introduction/4_optical_conductivity.tex
@@ -42,7 +42,9 @@ We believe, however, that their data analysis is problematic, because of the use
 formula. Eventhough the Drude formula is derived using classical physics, it is highly effective for
 analysing the conductivity of materials, which emerges from the collective quantum behavior of the
 electrons. But, this is only the case when the material has roughly isotropic electronic properties
-(more precisely, the Fermi surface needs to be approximately isotropic). This is not true for
-cuprates, which have highly anisotropic electronic properties. Also, the effective mass of the
+.\footnote{more precisely, the Fermi surface needs to be approximately isotropic} This is not true
+for cuprates, which have highly anisotropic electronic properties.\footnote{See Figure
+\ref{fig:fermi_surface}. The Fermi surface is not anisotropic at all, and there is no reasonable
+approximation for interpreting it in a roughly isotropic way.} Also, the effective mass of the
 charge carriers is not necessarily the same as the cyclotron mass, but we only focus on the former
 issue in this project.
