--- a/report/1_introduction/4_optical_conductivity.tex
+++ b/report/1_introduction/4_optical_conductivity.tex
@@ -41,8 +41,8 @@ results of Michon et al. and suggests that there is no QCP in cuprates.
 We believe, however, that their data analysis is problematic, because of the use of the Drude
 formula. Eventhough the Drude formula is derived using classical physics, it is highly effective for
 analysing the conductivity of materials, which emerges from the collective quantum behavior of the
-electrons. But, this is only the case when the material has roughly isotropic electronic properties
-.\footnote{more precisely, the Fermi surface needs to be approximately isotropic} This is not true
+electrons. But, this is only the case when the material has roughly isotropic electronic properties.
+\footnote{more precisely, the Fermi surface needs to be approximately isotropic} This is not true
 for cuprates, which have highly anisotropic electronic properties.\footnote{See Figure
 \ref{fig:fermi_surface}. The Fermi surface is not anisotropic at all, and there is no reasonable
 approximation for interpreting it in a roughly isotropic way.} Also, the effective mass of the
