--- a/report/1_introduction/4_optical_conductivity.tex
+++ b/report/1_introduction/4_optical_conductivity.tex
@@ -23,15 +23,18 @@
 In their 2022 paper, Legros et al.\cite{legros2022} instead used optical conductivity to
 probe the QCP. To do so, they first measured the optical conductivity of LSCO cuprates\footnote{
 LSCO is a cuprate with the formula La$_{2-x}$Sr$_x$CuO$_4$, where $x$ indicates the doping level.}
-in various fields. Then, they fitted a model for the conductivity called the Drude formula to the
-data. The Drude formula is a simple classical model that has been used for a long time in condensed
-matter physics to model conductivity. Next, they extracted the cyclotron mass from the parameters of
-the fit. Finally, they extracted the cyclotron mass from the parameters of the fit. To do so, they
-calculated the cyclotron frequency in different magnetic fields and found the mass by fitting a
-linear relation between the cyclotron frequency and the magnetic field;
-\begin{equation}
-    \omega_c = \frac{eB}{m_c}.
-\end{equation}
+in various fields. Then, they fitted a model called the Drude formula to the data, which is a naïve
+model for conductivity. The Drude formula is a simple classical model that has been used for a long
+time in condensed matter physics to model conductivity. With this, they extracted the cyclotron mass
+$m_c$ from the parameters of the fit.
+
+% Finally, they extracted the cyclotron mass from the parameters of
+% the fit. To do so, they calculated the cyclotron frequency in different magnetic fields and found
+% the mass by fitting a linear relation between the cyclotron frequency and the magnetic field;
+% \begin{equation}
+%     \omega_c = \frac{eB}{m_c}.
+% \end{equation}
+
 They argued the cyclotron mass is the same as the effective mass of the charge carriers
 ($m_c \sim m^*$), which can be a good or bad approximation.
 
