--- a/report/2_optical_conductivity/2_drude_modelling.tex
+++ b/report/2_optical_conductivity/2_drude_modelling.tex
@@ -6,19 +6,20 @@ where they interact with a periodic lattice.
 
 We can translate this hypothesis in the language of condensed matter physics and band structure theory (which will simplify the comparison with Chambers' formula later). 
 For a single electron, due to the periodicity of the lattice, 
-we can define a quasi-momentum $\vec{k}$ which is a good quantum number and defines states with given energies. 
+we can define a quasi-momentum $\vb{k}$ which is a good quantum number and defines states with given energies. 
 The filling of these levels according to Pauli's principle, by ascending energy, 
 allows us to define a Fermi energy and corresponding Fermi surface 
 which mostly determines the conduction properties of the material and can be, 
 in many cases, determined experimentally and modelled theoretically.
 
 What makes the Drude model useful is that in many cases, 
-this Fermi surface can be approximated by a sphere, which yields the dispersion relation $E(\vec{k}) = \frac{\hbar\vec{k}}{2m^*}$ 
-that is formally equivalent to that of a free electron (where $m^*$ is not necessarily $m_e$). 
-The Drude model assumes a unique scattering rate (independent of $\vec{k}$, because it doesn't introduce this quasi-momentum). \\
+this Fermi surface can be approximated by a sphere, which yields the dispersion relation
+$E(\vb{k}) = \frac{\hbar\vec{k}}{2m^*}$  that is formally equivalent to that of a free electron
+(where $m^*$ is not necessarily $m_e$). The Drude model assumes a unique scattering rate
+independent of $\vb{k}$.
 
 In the end, Legros et al.\cite{legros2022} and others\cite{post2021} use the two-component Drude model with normal and superconducting carriers (in the presence of a magnetic field). 
-In this model, the complex optical conductivity in the left/right circular polarization basis is given by :
+In this model, the complex optical conductivity in the left/right circular polarization basis is given by
 \begin{equation}
     \sigma_{ll/rr}(\omega) = i\epsilon_0\qty(
         \frac{\omega^2_{\mathrm{p,n}}}{\omega-\omega_c+i\Gamma}
@@ -39,6 +40,14 @@ As stated in Legros et al. and other sources,
 the high-frequency dielectric constant ($\epsilon_\infty$) does not greatly improve the quality of the fit and its results, so it is set to 1.
 Additionally, we can see here that in this model, the superconducting carriers only contribute to the imaginary part of $\sigma$. 
 This ended up being relevant to inform our fitting choices in the end.
+
+To extract the cyclotron mass from this model, one can fit the cyclotron frequency $\omega_c$ as a
+function of the magnetic field $B$ and extract the mass from the slope of the linear fit, as the
+relation between the two parameters is given by
+\begin{equation}
+    \omega_c = \frac{eB}{m_c},
+\end{equation}
+where $e$ is the elementary charge. This is the same approach used by Legros et al.\cite{legros2022}.
 
 As mentioned before, this model breaks down for materials with highly anisotropic electronic properties
 (i.e. highly anisotropic Fermi surfaces).
