added some corrections to the boltzmann transport introduction

--- a/report/1_introduction/5_boltzmann.tex
+++ b/report/1_introduction/5_boltzmann.tex
@@ -1,16 +1,16 @@
+\subsection{How to resolve the contradiction?}
 In light of these contradicting conclusions, our project seeks to investigate a possible solution.
 On the one hand, Michon et al. probe criticality directly: 
 that is, they look for a thermodynamic phase transition using a heat capacity measurement.
 
 On the other hand, Legros et al. probe it indirectly using a measurement of optical conductivity: 
-the value of interest is a parameter resulting from a fit of the experimental data. 
+$m_c$ is a parameter resulting from a fit of the experimental data. 
 Thus, any results are dependent on the theoretical model chosen to fit the data.
 
-One alternative to the Drude model used by Legros et al. is Chambers' formula, 
-derived from Boltzmann transport theory. 
-While the Drude model is derived for a free electron 
-(meaning it has isotropic transport properties), 
-Boltzmann transport takes into account such anisotropy. 
-This is particularly interesting for the study of cuprate high temperature superconductors, 
-where anisotropy is suspected to be of paramount importance.
+An alternative to the Drude model used by Legros et al. is the Chambers formula, 
+derived from Boltzmann transport theory.  While the Drude model is derived for a
+free electron (meaning it has isotropic transport properties), 
+Boltzmann transport takes into account such anisotropy and more of the microscopic details of the
+material.  This is particularly interesting for the study of cuprate high temperature
+superconductors, where anisotropy is suspected to be of paramount importance.
 
