added two references

--- a/report/ref.bib
+++ b/report/ref.bib
@@ -117,3 +117,35 @@
   keywords = {Electronic properties and materials,Superconducting properties and materials},
 }
 
+@article{horio2018,
+  title = {Three-Dimensional Fermi Surface of Overdoped La-Based Cuprates},
+  author = {Horio, M. and Hauser, K. and Sassa, Y. and Mingazheva, Z. and Sutter, D. and Kramer, K. and Cook, A. and Nocerino, E. and Forslund, O. K. and Tjernberg, O. and Kobayashi, M. and Chikina, A. and Schr\"oter, N. B. M. and Krieger, J. A. and Schmitt, T. and Strocov, V. N. and Pyon, S. and Takayama, T. and Takagi, H. and Lipscombe, O. J. and Hayden, S. M. and Ishikado, M. and Eisaki, H. and Neupert, T. and M\aa{}nsson, M. and Matt, C. E. and Chang, J.},
+  journal = {Phys. Rev. Lett.},
+  volume = {121},
+  issue = {7},
+  pages = {077004},
+  numpages = {6},
+  year = {2018},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.121.077004},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.121.077004}
+}
+
+﻿@article{schilling1993,
+author={Schilling, A.
+and Cantoni, M.
+and Guo, J. D.
+and Ott, H. R.},
+title={Superconductivity above 130 K in the Hg--Ba--Ca--Cu--O system},
+journal={Nature},
+year={1993},
+month={May},
+day={01},
+volume={363},
+number={6424},
+pages={56-58},
+issn={1476-4687},
+doi={10.1038/363056a0},
+url={https://doi.org/10.1038/363056a0}
+}
