Typo in Chambers

--- a/report/2_optical_conductivity/3_chambers.tex
+++ b/report/2_optical_conductivity/3_chambers.tex
@@ -1,4 +1,4 @@
-\subsection{Bolzmann Transport and Chambers Formula for Optical Conductivity}
+\subsection{Boltzmann Transport and Chambers Formula for Optical Conductivity}
 The Boltzmann transport equation is a semi-classical model of flow. 
 In the context of band structure theory reminded earlier, 
 and considering that the pseudo-momentum defined above applies to $N\gg 1$ actual particles (hence 'semi-classical'), 
