Fix Gael complaints on Drude reproduction

--- a/report/3_results/2_reproduction.tex
+++ b/report/3_results/2_reproduction.tex
@@ -10,9 +10,9 @@ issues during the fitting process except for a few extraneous points (see Figure
 and recreate their plots that extract a field dependence for the $\omega_{p,n}$, $\omega_c$,
 and $\Gamma$ parameters of the Drude model.
 
-For $\omega_{p,n}$ and $\Gamma$, field dependence is something that, in principle we wouldn't want to find in the result using Chambers' formula : 
-indeed, the scattering and the plasma frequency of the charge carriers should, 
-in principle, not depend on $B$.
+The apparent $B$-dependence of $\omega_{p,n}$ and $\Gamma$ is surprising.
+Indeed, in a metal, the scattering rate and the plasma frequency of the charge carriers should in principle not depend on $B$. 
+We suspect that this is because the Drude formula doesn't capture the microscopic details of LSCO.
 
 \begin{figure}
 \centering
@@ -28,7 +28,7 @@ in principle, not depend on $B$.
     \label{fig:gamma_theirs}
 \end{subfigure}
         
-\caption{Reproduction of Post et al. data analysis and extraction of isotropic Drude scattering $\Gamma$ as a function of applied field $B$}
+\caption{Reproduction of Post et al. data analysis and extraction of isotropic Drude scattering $\Gamma$ for different magnetic fields $B$}
 \label{fig:reproduction_post}
 \end{figure}
 
